--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="hero-bg">
+        hello
+    </div>
 </body>
 </html>
