--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 </head>
 <body>
     <div class="hero-bg">
-        hello
+        <section class="top">
+            <header>
+                <a href="#">yummy.eats</a>
+            </header>
+
+            <h1> <span>The Healthy</span> Eating Experience</h1>
+
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolor, necessitatibus eveniet repudiandae aspernatur alias cupiditate ex facere ratione officia.</p>
+            
+            <div class="form-container">
+                <form action="">
+                    <div class="form-left">
+                        <label for="city">Enter Your City</label>
+                        <input type="text" name="city" id="city">
+                        <p>Example: San Diego</p>
+                    </div>
+                    <input type="button" value="Find Food Now">
+                    
+                </form>
+            </div>
+        </section>
     </div>
+    <section class="authentic">
+       <div class="right-col">
+        <h2>Authentic Awesome</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint rem voluptas incidunt at voluptate fugit distinctio sed saepe quae magni.</p>
+       </div>
+       <img src="images/photo-1496116218417-1a781b1c416c.avif" alt="Picture of Dumplings"> 
+    </section>
+
 </body>
 </html>
