--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="hero-bg">
+        
         <section class="top">
             <header>
                 <a href="#">yummy.eats</a>
@@ -25,7 +26,7 @@
                         <input type="text" name="city" id="city">
                         <p>Example: San Diego</p>
                     </div>
-                    <input type="button" value="Find Food Now">
+                    <input type="button" value="Find Food Now" id="cta-btn">
                     
                 </form>
             </div>
@@ -38,6 +39,11 @@
        </div>
        <img src="images/photo-1496116218417-1a781b1c416c.avif" alt="Picture of Dumplings"> 
     </section>
+    <script>
+        /* Java Script */
 
+
+
+    </script>
 </body>
 </html>
