--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="overlay" id="overlay">
+        <h3>Searching Now...</h3>
+    </div>
     <div class="hero-bg">
         
         <section class="top">
@@ -41,8 +44,14 @@
     </section>
     <script>
         /* Java Script */
+        let btn = document.getElementById('cta-btn');
+        let overlay = document.getElementById('overlay');
 
+        btn.addEventListener('click', () => {
+            overlay.style.display = 'grid';
+            overlay.classList.add('animate-overlay')
 
+        })
 
     </script>
 </body>
